k8s-manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tiendaTienda
spec:
  selector:
    matchLabels:
      name: tiendaTienda
  template:
    metadata:
      labels:
        name: tiendaTienda
    spec:
      containers:
        - image: Oth4r/tiendaTienda
          name: tiendaTienda
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
