k8s-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tiendatienda
  labels:
    name: tiendatienda
spec:
  ports:
  - port: 80
    name: http
    targetPort: 4200
  selector:
    name: tiendatienda
